--- a/src/styles/ui/header.scss
+++ b/src/styles/ui/header.scss
@@ -73,7 +73,7 @@
 
                 li {
                     background-color: $main-color;
-                    width: 72px;
+                    width: 70px;
                     height: 72px;
                     line-height: 70px;
                     color: #fff;
